Updated contact us

--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#snvBdUnXZE-modal">
-                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="0" data-target="#lb-snvBdUnXZE">
+                <div class="item-wrapper" data-toggle="modal" data-target="#snw58bDEDU-modal">
+                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="0" data-target="#lb-snw58bDEDU">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -181,8 +181,8 @@
                     Image Caption</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#snvBdUnXZE-modal">
-                    <img class="w-100" src="assets/images/img-20210124-wa0030-980x735.jpeg" alt="" data-slide-to="1" data-target="#lb-snvBdUnXZE">
+                <div class="item-wrapper" data-toggle="modal" data-target="#snw58bDEDU-modal">
+                    <img class="w-100" src="assets/images/img-20210124-wa0030-980x735.jpeg" alt="" data-slide-to="1" data-target="#lb-snw58bDEDU">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -191,8 +191,8 @@
                     Image Caption</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#snvBdUnXZE-modal">
-                    <img class="w-100" src="assets/images/test-leaft-420x300.jpg" alt="" data-slide-to="2" data-target="#lb-snvBdUnXZE">
+                <div class="item-wrapper" data-toggle="modal" data-target="#snw58bDEDU-modal">
+                    <img class="w-100" src="assets/images/test-leaft-420x300.jpg" alt="" data-slide-to="2" data-target="#lb-snw58bDEDU">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -200,8 +200,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">
                     Image Caption</h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#snvBdUnXZE-modal">
-                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="3" data-target="#lb-snvBdUnXZE">
+                <div class="item-wrapper" data-toggle="modal" data-target="#snw58bDEDU-modal">
+                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="3" data-target="#lb-snw58bDEDU">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -210,8 +210,8 @@
                     Image Caption</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#snvBdUnXZE-modal">
-                    <img class="w-100" src="assets/images/img-20210124-wa0030-980x735.jpeg" alt="" data-slide-to="4" data-target="#lb-snvBdUnXZE">
+                <div class="item-wrapper" data-toggle="modal" data-target="#snw58bDEDU-modal">
+                    <img class="w-100" src="assets/images/img-20210124-wa0030-980x735.jpeg" alt="" data-slide-to="4" data-target="#lb-snw58bDEDU">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -219,8 +219,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">
                     Image Caption</h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#snvBdUnXZE-modal">
-                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="5" data-target="#lb-snvBdUnXZE">
+                <div class="item-wrapper" data-toggle="modal" data-target="#snw58bDEDU-modal">
+                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="5" data-target="#lb-snw58bDEDU">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -228,8 +228,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">
                     Image Caption</h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#snvBdUnXZE-modal">
-                    <img class="w-100" src="assets/images/test-leaft-420x300.jpg" alt="" data-slide-to="6" data-target="#lb-snvBdUnXZE">
+                <div class="item-wrapper" data-toggle="modal" data-target="#snw58bDEDU-modal">
+                    <img class="w-100" src="assets/images/test-leaft-420x300.jpg" alt="" data-slide-to="6" data-target="#lb-snw58bDEDU">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -237,8 +237,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">
                     Image Caption</h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#snvBdUnXZE-modal">
-                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="7" data-target="#lb-snvBdUnXZE">
+                <div class="item-wrapper" data-toggle="modal" data-target="#snw58bDEDU-modal">
+                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="7" data-target="#lb-snw58bDEDU">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -248,11 +248,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="snvBdUnXZE-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="snw58bDEDU-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide carousel-fade" id="lb-snvBdUnXZE" data-ride="carousel" data-interval="6000">
+                        <div class="carousel slide carousel-fade" id="lb-snw58bDEDU" data-ride="carousel" data-interval="6000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/plant-nation-420x300.jpg" alt="">
@@ -276,18 +276,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#lb-snvBdUnXZE"></li>
-                                <li data-slide-to="1" data-target="#lb-snvBdUnXZE"></li>
-                                <li data-slide-to="2" data-target="#lb-snvBdUnXZE"></li>
-                                <li data-slide-to="3" data-target="#lb-snvBdUnXZE"></li><li data-slide-to="4" data-target="#lb-snvBdUnXZE"></li><li data-slide-to="5" data-target="#lb-snvBdUnXZE"></li><li data-slide-to="6" data-target="#lb-snvBdUnXZE"></li><li data-slide-to="7" data-target="#lb-snvBdUnXZE"></li>
+                                <li data-slide-to="0" class="active" data-target="#lb-snw58bDEDU"></li>
+                                <li data-slide-to="1" data-target="#lb-snw58bDEDU"></li>
+                                <li data-slide-to="2" data-target="#lb-snw58bDEDU"></li>
+                                <li data-slide-to="3" data-target="#lb-snw58bDEDU"></li><li data-slide-to="4" data-target="#lb-snw58bDEDU"></li><li data-slide-to="5" data-target="#lb-snw58bDEDU"></li><li data-slide-to="6" data-target="#lb-snw58bDEDU"></li><li data-slide-to="7" data-target="#lb-snw58bDEDU"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-snvBdUnXZE">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-snw58bDEDU">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-snvBdUnXZE">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-snw58bDEDU">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
@@ -308,12 +308,12 @@
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2">
                     Contact <strong>Us</strong></h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-5">
-                    Write to us <strong><a href="mailto:plantsnation21@gmail.com" class="text-primary">plantsnation21@gmail.com</a></strong></h4>
+                    Feel free to write us at&nbsp;<strong><a href="mailto:plantsnation21@gmail.com" class="text-primary">plantsnation21@gmail.com</a></strong></h4>
                 
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/v" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Plants Nation, Made with love <3</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/y" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Plants Nation, Made with love <3</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
