--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#snA8NqF58H-modal">
-                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="0" data-target="#lb-snA8NqF58H">
+                <div class="item-wrapper" data-toggle="modal" data-target="#snAbDSEQiR-modal">
+                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="0" data-target="#lb-snAbDSEQiR">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -180,8 +180,8 @@
                     Image Caption</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#snA8NqF58H-modal">
-                    <img class="w-100" src="assets/images/img-20210124-wa0030-980x735.jpeg" alt="" data-slide-to="1" data-target="#lb-snA8NqF58H">
+                <div class="item-wrapper" data-toggle="modal" data-target="#snAbDSEQiR-modal">
+                    <img class="w-100" src="assets/images/img-20210124-wa0030-980x735.jpeg" alt="" data-slide-to="1" data-target="#lb-snAbDSEQiR">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -190,8 +190,8 @@
                     Image Caption</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#snA8NqF58H-modal">
-                    <img class="w-100" src="assets/images/test-leaft-420x300.jpg" alt="" data-slide-to="2" data-target="#lb-snA8NqF58H">
+                <div class="item-wrapper" data-toggle="modal" data-target="#snAbDSEQiR-modal">
+                    <img class="w-100" src="assets/images/test-leaft-420x300.jpg" alt="" data-slide-to="2" data-target="#lb-snAbDSEQiR">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -199,8 +199,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">
                     Image Caption</h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#snA8NqF58H-modal">
-                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="3" data-target="#lb-snA8NqF58H">
+                <div class="item-wrapper" data-toggle="modal" data-target="#snAbDSEQiR-modal">
+                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="3" data-target="#lb-snAbDSEQiR">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -209,8 +209,8 @@
                     Image Caption</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#snA8NqF58H-modal">
-                    <img class="w-100" src="assets/images/img-20210124-wa0030-980x735.jpeg" alt="" data-slide-to="4" data-target="#lb-snA8NqF58H">
+                <div class="item-wrapper" data-toggle="modal" data-target="#snAbDSEQiR-modal">
+                    <img class="w-100" src="assets/images/img-20210124-wa0030-980x735.jpeg" alt="" data-slide-to="4" data-target="#lb-snAbDSEQiR">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -218,8 +218,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">
                     Image Caption</h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#snA8NqF58H-modal">
-                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="5" data-target="#lb-snA8NqF58H">
+                <div class="item-wrapper" data-toggle="modal" data-target="#snAbDSEQiR-modal">
+                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="5" data-target="#lb-snAbDSEQiR">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -227,8 +227,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">
                     Image Caption</h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#snA8NqF58H-modal">
-                    <img class="w-100" src="assets/images/test-leaft-420x300.jpg" alt="" data-slide-to="6" data-target="#lb-snA8NqF58H">
+                <div class="item-wrapper" data-toggle="modal" data-target="#snAbDSEQiR-modal">
+                    <img class="w-100" src="assets/images/test-leaft-420x300.jpg" alt="" data-slide-to="6" data-target="#lb-snAbDSEQiR">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -236,8 +236,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">
                     Image Caption</h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#snA8NqF58H-modal">
-                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="7" data-target="#lb-snA8NqF58H">
+                <div class="item-wrapper" data-toggle="modal" data-target="#snAbDSEQiR-modal">
+                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="7" data-target="#lb-snAbDSEQiR">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -247,11 +247,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="snA8NqF58H-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="snAbDSEQiR-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide carousel-fade" id="lb-snA8NqF58H" data-ride="carousel" data-interval="6000">
+                        <div class="carousel slide carousel-fade" id="lb-snAbDSEQiR" data-ride="carousel" data-interval="6000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/plant-nation-420x300.jpg" alt="">
@@ -275,18 +275,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#lb-snA8NqF58H"></li>
-                                <li data-slide-to="1" data-target="#lb-snA8NqF58H"></li>
-                                <li data-slide-to="2" data-target="#lb-snA8NqF58H"></li>
-                                <li data-slide-to="3" data-target="#lb-snA8NqF58H"></li><li data-slide-to="4" data-target="#lb-snA8NqF58H"></li><li data-slide-to="5" data-target="#lb-snA8NqF58H"></li><li data-slide-to="6" data-target="#lb-snA8NqF58H"></li><li data-slide-to="7" data-target="#lb-snA8NqF58H"></li>
+                                <li data-slide-to="0" class="active" data-target="#lb-snAbDSEQiR"></li>
+                                <li data-slide-to="1" data-target="#lb-snAbDSEQiR"></li>
+                                <li data-slide-to="2" data-target="#lb-snAbDSEQiR"></li>
+                                <li data-slide-to="3" data-target="#lb-snAbDSEQiR"></li><li data-slide-to="4" data-target="#lb-snAbDSEQiR"></li><li data-slide-to="5" data-target="#lb-snAbDSEQiR"></li><li data-slide-to="6" data-target="#lb-snAbDSEQiR"></li><li data-slide-to="7" data-target="#lb-snAbDSEQiR"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-snA8NqF58H">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-snAbDSEQiR">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-snA8NqF58H">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-snAbDSEQiR">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
@@ -309,11 +309,11 @@
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-5">
                     Feel free to write us at<em>&nbsp;</em><a href="mailto:plantsnation21@gmail.com" class="text-primary" style="font-style: italic; font-weight: bold;">plantsnation21@gmail.com</a><br><br>And If you wish to get weekly gardening tips from us please subscribe to our leaflets.</h4>
                 <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://mobiri.se">Subscribe To Us</a>
-                </div>
+                    </div>
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/p" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Plants Nation, Made with love <3</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/e" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Plants Nation, Made with love <3</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
