Finally fixed the footer

--- a/index.html
+++ b/index.html
@@ -308,12 +308,40 @@
                     Contact <strong>Us</strong></h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-5">
                     Feel free to write us at<em>&nbsp;</em><a href="mailto:plantsnation21@gmail.com" class="text-primary" style="font-style: italic; font-weight: bold;">plantsnation21@gmail.com</a><br><br>And If you wish to get weekly gardening tips from us please subscribe to our leaflets.</h4>
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://mobiri.se">Subscribe To Us</a>
-                    </div>
+                    <div class="mbr-section-btn align-center">
+                        <a class="btn btn-primary display-4" href="https://duckduckgo.com/">Subscribe To Us</a>
+                           </div>
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/e" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Plants Nation, Made with love <3</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section>
+<section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;">
+
+    <a href="https://mobirise.site/e" style="flex: 1 1; height: 3rem; padding-left: 1rem; pointer-events: none; cursor: default;"></a>
+
+    <p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Plants Nation, Made with love <3</p>
+
+</section>
+    <script src="assets/web/assets/jquery/jquery.min.js"></script>  
+
+    <script src="assets/popper/popper.min.js"></script>  
+
+    <script src="assets/tether/tether.min.js"></script>  
+
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>  
+
+    <script src="assets/smoothscroll/smooth-scroll.js"></script> 
+
+     <script src="assets/viewportchecker/jquery.viewportchecker.js">
+         
+
+     </script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  
+
+     <script src="assets/dropdown/js/navbar-dropdown.js"></script> 
+
+      <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  
+
+      <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
