fixed typo in testimonials and changed the text color to white

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <div class="title col-md-12 col-lg-8">
                     <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2">
                         About Us</h3>
-                    <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-5">Looking back on 2020 is
+                    <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-5" style="color: white;">Looking back on 2020 is
                         when the idea of Plants Nation was born. It’s been a year none of us will forget. During this
                         tragic time, one of the real positives was a small tangled heart plant, and to watch it grow,
                         simply revived love for plants. Further, from one to many our collection kept growing. Here, the
@@ -486,7 +486,7 @@
                             </div>
                             <div class="user_text mb-4">
                                 <p class="mbr-fonts-style display-7">" Was looking for a low maintenance and fast
-                                    growing plant for my bedroom decor. Purchased monsteraadansonii as per planstnation
+                                    growing plant for my bedroom decor. Purchased monsteraadansonii as per plantsnation
                                     suggestion and could not have been happier. Waking up to this beautiful plant in a
                                     plantsnation crafted jute pot is an incredible start to your day. Love the weekly
                                     care notes! Kudos to the team. Keep it up! "</p>
