fixed typo in testimonials and changed the text color to white and changed color to white of testimonials

--- a/index.html
+++ b/index.html
@@ -454,11 +454,11 @@
                                 <img src="assets/images/plants-nation-logo-169x169.jpg" alt="">
                             </div>
                             <div class="user_text mb-4">
-                                <p class="mbr-fonts-style display-7">" If you are a plant lover just like me, then
+                                <p class="mbr-fonts-style display-7" style="color: white;">"If you are a plant lover just like me, then
                                     PLANTS NATION is the perfect place for you!😍<br>A one stop shop for all your plant
                                     needs, from beautiful and very unique range of plants to even more lovely
                                     planters!🤩<br>Their amazing jute bags are something that you can't miss out
-                                    on!<br>I'm too happy with my purchase, THANK YOU PLANTS NATION!🥳 "</p>
+                                    on!<br>I'm too happy with my purchase, THANK YOU PLANTS NATION!🥳"</p>
                             </div>
                             <div class="user_name mbr-fonts-style mb-2 display-5"><strong>- Payal Shah</strong></div>
 
@@ -470,10 +470,10 @@
                                 <img src="assets/images/plants-nation-logo-169x169.jpg" alt="">
                             </div>
                             <div class="user_text mb-4">
-                                <p class="mbr-fonts-style display-7">" I have been following Plantsnation since its
+                                <p class="mbr-fonts-style display-7" style="color: white;">"I have been following Plantsnation since its
                                     inception and i love the fact that they have different and unique kinds of plants.
                                     Not only that but they quality of the plants is best as they are nurtured with
-                                    nothing but love!! This one is highly recommended! "</p>
+                                    nothing but love!! This one is highly recommended!"</p>
                             </div>
                             <div class="user_name mbr-fonts-style mb-2 display-5"><strong>- Yash Nagar</strong></div>
 
@@ -485,11 +485,11 @@
                                 <img src="assets/images/plants-nation-logo-169x169.jpg" alt="">
                             </div>
                             <div class="user_text mb-4">
-                                <p class="mbr-fonts-style display-7">" Was looking for a low maintenance and fast
+                                <p class="mbr-fonts-style display-7" style="color: white;">"Was looking for a low maintenance and fast
                                     growing plant for my bedroom decor. Purchased monsteraadansonii as per plantsnation
                                     suggestion and could not have been happier. Waking up to this beautiful plant in a
                                     plantsnation crafted jute pot is an incredible start to your day. Love the weekly
-                                    care notes! Kudos to the team. Keep it up! "</p>
+                                    care notes! Kudos to the team. Keep it up!"</p>
                             </div>
                             <div class="user_name mbr-fonts-style mb-2 display-5"><strong>- Ashish Angadi</strong></div>
 
